fix(ColorPicker): Add spacing between color field & adjacent slider (#355)

--- a/src/color-picker/color-picker.scss
+++ b/src/color-picker/color-picker.scss
@@ -122,9 +122,17 @@ $iui-focus-box-shadow: 0 0 1px $iui-xxs + 1 rgba(t(iui-color-foreground-primary-
   &-fields {
     display: flex;
     width: 100%;
+    gap: $iui-xxs;
 
-    .iui-input:not(:last-child) {
+    > * {
+      flex-grow: 1;
+    }
+
+    > *:not(:last-child) {
       margin-right: $iui-xxs;
+      @supports (gap: $iui-xxs) {
+        margin-right: 0;
+      }
     }
 
     input {
@@ -164,6 +172,10 @@ $iui-focus-box-shadow: 0 0 1px $iui-xxs + 1 rgba(t(iui-color-foreground-primary-
   @include themed {
     background-image: linear-gradient(0deg, rgb(0, 0, 0), transparent),
       linear-gradient(90deg, rgb(255, 255, 255), var(--hue));
+  }
+
+  &:not(:last-child) {
+    margin-bottom: round($iui-baseline * 0.5);
   }
 }
 
